# Pill-Engine

./: .gitignore  README.md  build-web.sh  wasm-size.sh
.cargo/: config.toml
crates/pill_core/: Cargo.toml
crates/pill_core/src/: error.rs  lib.rs  math.rs  timer.rs  utils.rs
engine/: Cargo.toml
engine/.cargo/: config.toml
engine/pill_abi/: Cargo.toml
engine/pill_abi/src/: lib.rs
engine/pill_assets/: Cargo.toml
engine/pill_assets/src/: lib.rs
engine/pill_assets/src/rules/: equirect_to_ibl.rs  glb_to_cooked_mesh.rs  hlsl_to_wgsl.rs  mod.rs  obj_to_cooked_mesh.rs  obj_to_rmesh.rs  obj_to_runtime_mesh.rs  png_to_cooked_tex.rs  png_to_rtex.rs  studio_equirect.rs
engine/pill_core/: Cargo.toml
engine/pill_core/src/: bitmask_utils.rs  color.rs  error.rs  handle.rs  lib.rs  log.rs  math.rs  net.rs  networking.rs  pill_slotmap.rs  pill_twinmap.rs  pill_typemap.rs  style.rs  tags.rs  timer.rs  utils.rs
engine/pill_engine/: Cargo.toml  build.rs
engine/pill_engine/docs/uml/: connection.puml  connection_operation.puml  dis_reconnection.puml
engine/pill_engine/res/shaders/: background_fragment.hlsl  background_vertex.hlsl  default_lit_fragment.glsl  default_lit_fragment.hlsl  default_lit_fragment.wgsl  default_unlit_fragment.glsl  default_unlit_fragment.hlsl  default_unlit_fragment.wgsl  default_vertex.glsl  default_vertex.hlsl  default_vertex.wgsl  master.vert.glsl  pbr_static_fragment.hlsl  pbr_static_vertex.hlsl  tonemap_fragment.hlsl  tonemap_vertex.hlsl
engine/pill_engine/res/shaders/include/: common.hlsl  equirect.hlsl
engine/pill_engine/res/textures/: default_color.rtex  default_normal.rtex
engine/pill_engine/src/: app_config.rs  config.rs  engine.rs  lib.rs
engine/pill_engine/src/ecs/: egui_client.rs  entity.rs  mod.rs  scene.rs  scene_manager.rs
engine/pill_engine/src/ecs/components/: audio_listener_component.rs  audio_manager_component.rs  audio_source_component.rs  camera_component.rs  component.rs  component_storage.rs  deferred_update_component.rs  egui_component.rs  egui_manager_component.rs  input_component.rs  mesh_component.rs  mesh_rendering_component.rs  mod.rs  net_components.rs  network_manager_component.rs  network_state_component.rs  pbr_renderable_component.rs  render_state_component.rs  time_component.rs  transform_component.rs
engine/pill_engine/src/ecs/systems/: audio_system.rs  deferred_update_system.rs  egui_system.rs  haptics_system.rs  input_system.rs  mod.rs  networking_system.rs  rendering_system.rs  system_manager.rs  time_system.rs
engine/pill_engine/src/graphics/: dummy_renderer.rs  egui.rs  mod.rs  pass_background.rs  pass_compose.rs  pass_dof_bokeh.rs  pass_egui.rs  pass_ibl_diffuse_equirect.rs  pass_ibl_specular_equirect.rs  pass_linearize_depth.rs  pass_logo.rs  pass_mesh.rs  pass_motion_blur.rs  pass_overlay_depth.rs  pass_overlay_uv.rs  pass_overlay_velocity.rs  pass_pbr_static.rs  pass_scene.rs  pass_skybox_equirect.rs  pass_tonemap.rs  pass_tonemap_README.md  projection.rs  render_queue.rs  renderer.rs
engine/pill_engine/src/renderer/: DESIGN.md  PLAN_v1.md  config.rs  egui.rs  instance.rs  mod.rs  renderer_resource_storage.rs  resource_manager.rs  state.rs  wgpu.rs
engine/pill_engine/src/renderer/drawers/: egui_drawer.rs  mesh_drawer.rs
engine/pill_engine/src/renderer/resources/: engine_parameters.rs  mod.rs  renderer_camera.rs  renderer_material.rs  renderer_mesh.rs  renderer_resource_storage.rs  renderer_shader.rs  renderer_texture.rs
engine/pill_engine/src/resources/: gpu_resources.rs  material.rs  mesh.rs  mod.rs  model.rs  resource.rs  resource_manager.rs  resource_storage.rs  shader.rs  sound.rs  texture.rs
engine/pill_headless/: Cargo.toml
engine/pill_headless/src/: main.rs
engine/pill_launcher/: Cargo.toml
engine/pill_launcher/res/templates/pill_default/: Cargo.toml
engine/pill_launcher/src/: dev_server.rs  main.rs  size_report.rs  wasm_build.rs  web_dev_server.rs
engine/pill_native/: Cargo.toml
engine/pill_native/src/: main.rs
engine/pill_renderer/: Cargo.toml  DESIGN.md  DESIGN_DEPTH_PREPASS.md  PLAN_v0.md  TALK_0.md
engine/pill_renderer/src/: config.rs  egui.rs  egui_drawer.rs  instance.rs  lib.rs  m1_bootstrap.rs  mesh_drawer.rs  mesh_renderer.rs  pass_compose.rs  pass_overlay_depth.rs  pass_overlay_logo.rs  pass_overlay_uv.rs  pass_scene.rs  passes.rs  profiler.rs  renderer.rs  renderer_resource_storage.rs  resource_manager.rs  resource_snapshot.rs
engine/pill_renderer/src/drawers/: egui_drawer.rs  mesh_drawer.rs  mod.rs
engine/pill_renderer/src/passes/: mod.rs  pass_scene.rs
engine/pill_renderer/src/resources/: engine_parameters.rs  gpu_resources.rs  mod.rs  renderer_camera.rs  renderer_material.rs  renderer_mesh.rs  renderer_pipeline.rs  renderer_resource_storage.rs  renderer_shader.rs  renderer_texture.rs
engine/pill_runtime/: Cargo.toml
engine/pill_runtime/src/: lib.rs
engine/pill_standalone/: Cargo.toml
engine/pill_standalone/src/: file_watcher.rs  lib.rs  main.rs
engine/pill_web/: Cargo.toml  index.html
engine/pill_web/src/: lib.rs
examples/floating_pills/: Cargo.toml
examples/floating_pills/res/: config.ini
examples/floating_pills/res/models/: rounded_cube.rmesh  torus.cooked_mesh
examples/floating_pills/src/: game.rs  lib.rs
examples/gaussian_splat/: Cargo.toml
examples/gaussian_splat/res/: config.ini
examples/gaussian_splat/src/: free_fly.rs  game.rs  gaussian_cloud.rs  lib.rs  pass_splat.rs
examples/net_minimal/client/: Cargo.toml
examples/net_minimal/client/res/: config.ini
examples/net_minimal/client/src/: game.rs
examples/net_minimal/server/: Cargo.toml
examples/net_minimal/server/res/: empty.txt
examples/net_minimal/server/src/: main.rs
examples/pbr_balls/: Cargo.toml  build.rs
examples/pbr_balls/res/: config.ini
examples/pbr_balls/src/: bake.rs  game.rs  lib.rs
examples/pill_tunel/: Cargo.toml  build.rs
examples/pill_tunel/res/: config.ini
examples/pill_tunel/res/models/: pill.cooked_mesh
examples/pill_tunel/res/textures/: pill_logo.cooked_tex
examples/pill_tunel/src/: game.rs  lib.rs
(+60 files in other folders)
