[workspace]
resolver = "2"
members = [
    "pill_abi",
    "pill_assets",
    "pill_core",
    "pill_engine",
    "pill_renderer",
    "pill_native",
    "pill_web",
    "pill_runtime",
    "/Users/mk/dev/demo/Pill-Engine-Upstream/examples/cube", ### Game project crate (This will be changed by Pill Launcher on build to allow proper compilation of game project)
]

# The per-game wasm cdylib (pill_web_app) lives as a template at
# pill_launcher/res/templates/wasm/ and is instantiated per-game by the launcher.
# The shared web runtime is the workspace crate `pill_web`.
exclude = [
    "pill_launcher",
]

[profile.hot-reload]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
incremental = true
codegen-units = 256
lto = "off"
panic = "abort"
