[package]
name = "pill_core"
version = "0.1.0"
authors = [
    # Extend this list when submiting PR
    "Mateusz Szymoński <mateusz.szymonski@gmail.com>",
    "Jakub Duchniewicz <j.duchniewicz@gmail.com>"
    ]
edition = "2021"

[dependencies]
glam = { version = "0.30.8", features = ["serde"] }
anyhow = "1.0.45"
thiserror = "1.0.30"
colored = "2.0.0"
log = "0.4"
indexmap = "1.7.0"
config = "0.11"
env_logger = "0.9.0"
chrono = "0.4.19"
strum_macros = "0.27.2"
strum = "0.27.2"
bincode = "1.0"
web-time = "1.1"

# Native-only networking (not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
renet = "1.0.0"
renet_netcode = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
