[package]
name = "pill_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
pill_core = {path = "../pill_core"}
glam = { version = "0.30.8", features = ["serde", "bytemuck"] }

# Data containers
indexmap = "1.7.0"

# Errors
anyhow = "1.0.45"
thiserror = "1.0.30"

# Loggers
log = "0.4"

# Loaders
image = "0.23"
tobj = "3.0"

# Other
readonly = "0.2"
winit = "0.30.12"
bytemuck = { version = "1.4", features = [ "derive" ] }
lazy_static = "1.4.0"
config = "0.11"
dyn-clone = "1.0.4"
egui = "0.32.1"
egui-wgpu = { version = "0.32.1", features = ["winit"] }
wgpu = "25.0.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
once_cell = "1.21.3"
bitvec = "1.0.1"
rand = "0.9.2"
web-time = "1.1"

# Native-only dependencies (not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.20", features = ["wav", "mp3"] }
gilrs = "0.11.0"
pollster = "0.2"
egui-winit = { version = "0.32.1", features = ["clipboard"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.32.1", default-features = false }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
pill_assets = { path = "../pill_assets" }

[features]
game = []
internal = []
headless = []
networking = []
all = ["game", "internal", "networking"]
