[package]
name = "pill_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
pill_core = {path = "../pill_core"}
glam = { version = "0.30.8", features = ["serde", "bytemuck"] }

# Errors
thiserror = "1.0.30"

# Loggers
log = { version = "0.4", features = ["release_max_level_off"] }

# Loaders
tobj = { version = "3.0", optional = true }

# Other
readonly = "0.2"
winit = "0.30.12"
bytemuck = { version = "1.4", features = [ "derive" ] }
lazy_static = "1.4.0"
dyn-clone = "1.0.4"
wgpu = "25.0.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
once_cell = "1.21.3"
bitvec = "1.0.1"
rand = "0.9.2"
web-time = "1.1"

# Optional deps activated by feature flags
egui = { version = "0.32.1", optional = true }
egui-wgpu = { version = "0.32.1", features = ["winit"], optional = true }
egui-winit = { version = "0.32.1", default-features = false, optional = true }

# Native-only dependencies (not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
png = "0.17"
rodio = { version = "0.20", features = ["wav", "mp3"] }
gilrs = "0.11.0"
pollster = "0.2"


[build-dependencies]
fs_extra = "1.2"
pill_assets = { path = "../pill_assets" }

[features]
game = []
internal = []
headless = []
networking = []
ui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]
obj_loading = ["dep:tobj"]
all = ["game", "internal", "networking"]
