
[package]
name = "pill_headless"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = "1"
log        = "0.4"
env_logger = "0.11"
config     = "0.11"

pill_engine = { path = "../pill_engine", default-features = false }
pill_core = { path = "../pill_core", default-features = false }
chrono = "0.4.41"
ctrlc = "3.4.7"

[features]
default = []

# Run headless, no networking at all
headless = [
  "pill_engine/internal",
  "pill_engine/headless",
]

net = [
    "pill_engine/net",
]

# Run headless + start an authoritative server
headless-server = [
  "pill_engine/internal",
  "pill_engine/headless",
  "net"
]

