[package]
name = "pill_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
pill_core = {path = "../pill_core"}
pill_engine = {path = "../pill_engine", features = ["internal"]}

# Logging
log = "0.4"

# Other
wgpu = "25.0.0"
glam = { version = "0.30.8", features = ["serde", "bytemuck"] }
winit = "0.30.12"
cgmath = "0.18"
bytemuck = { version = "1.4", features = [ "derive" ] }
# egui (optional — enabled by debug_ui feature)
egui = { version = "0.32.1", optional = true }
egui-wgpu = { version = "0.32.1", features = ["winit"], optional = true }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"
egui-winit = { version = "0.32.1", features = ["clipboard"], optional = true }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.32.1", default-features = false, optional = true }

[features]
debug_ui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit", "pill_engine/debug_ui"]
