[package]
name = "pill_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
pill_core = {path = "../pill_core"}
pill_engine = {path = "../pill_engine", features = ["internal"]}

# Data containers
indexmap = "1.7.0"

# Loaders
image = "0.23"

# Errors
anyhow = "1.0"

# Logging
log = "0.4"

# Other
wgpu = "25.0.0"
glam = { version = "0.30.8", features = ["serde", "bytemuck"] }
winit = "0.30.12"
bytemuck = { version = "1.4", features = [ "derive" ] }
config = "0.11"

# egui
egui = "0.32.1"
egui-wgpu = { version = "0.32.1", features = ["winit"] }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2"
egui-winit = { version = "0.32.1", features = ["clipboard"] }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.32.1", default-features = false }
