[package]
name = "pill_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pill_abi = { path = "../pill_abi" }
pill_core = { path = "../pill_core" }
pill_engine = { path = "../pill_engine", features = ["internal"] }

anyhow = "1.0"
config = "0.11"
libloading = "0.8.8"
winit = "0.30.12"

