[package]
name = "pill_standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
pill_core = {path = "../pill_core"}
pill_engine = {path = "../pill_engine", features = ["internal"]}
pill_renderer = {path = "../pill_renderer"}

winit = "0.30.12"
log = "0.4"
config = "0.11"
anyhow = "1.0.45"
libloading = "0.8.8"