[package]
name = "pill_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pill_engine = { path = "../pill_engine", features = ["game", "internal"] }
pill_renderer = { path = "../pill_renderer" }
pill_core = { path = "../pill_core" }
pill_game = { path = "/Users/mk/dev/demo/pill_demo_upstream" }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Element",
    "Performance",
] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
winit = { version = "0.30.12" }
config = "0.11"
getrandom = { version = "0.3", features = ["wasm_js"] }
