[package]
name = "pill_game"
version = "0.1.0"
edition = "2021"
workspace = "NO_PATH"

[lib]
crate-type = ["cdylib"]

[dependencies]
pill_engine = {path = "../../engine/pill_engine", features = ["game"]}

rand = "0.8.4"
glam = { version = "0.30.8", features = ["serde"] }

[features]
benchmark = []

default = ["benchmark"]
