[package]
name = "pill_game"
version = "0.1.0"
edition = "2021"
workspace = "/home/jduchniewicz/Projects/StickyPistonStudios/Pill-Engine/engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
pill_engine = {path = "../../engine/pill_engine", features = ["game"]}

rand = "0.8.4"
glam = { version = "0.30.8", features = ["serde"] }

[features]
benchmark = []

default = ["benchmark"]

[profile.release]
lto = "thin"
