[package]
name = "pill_game"
version = "0.1.0"
edition = "2021"
workspace = "/Users/mk/dev/demo/Pill-Engine/engine"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
ureq = "2"
pill_assets = { path = "../../engine/pill_assets" }

[dependencies]
pill_engine = { path = "../../engine/pill_engine", features = ["game", "internal"] }
