[package]
name = "pill_game"
version = "0.1.0"
edition = "2021"
workspace = "NO_PATH"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pill_engine = { path = "../../engine/pill_engine", features = ["game", "internal"] }

[build-dependencies]
pill_assets = { path = "../../engine/pill_assets" }
anyhow = "1"
tobj = "3.0"
image = { version = "0.25", default-features = false, features = ["png"] }
